# crabmix

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: moonlight
crates/crabmix/: Cargo.toml  assets
crates/crabmix/examples/: filters.rs  sinewave.rs
crates/crabmix/src/: lib.rs  wave.rs
crates/moonlight/: Cargo.toml
crates/moonlight/examples/: filters.rs  sinewave.rs
crates/moonlight/src/: lib.rs  wave.rs
crates/riffy_chan/: Cargo.toml  assets
crates/riffy_chan/src/: lib.rs
crates/riffy_chan/src/assets/: riff_chunk.riff
crates/rustttwavvv/: Cargo.toml  assets
crates/rustttwavvv/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
src/: lib.rs
