# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = [
  "./crates/xtask",
  "./crates/moonlight",
  "./crates/riffy_chan",
  "./crates/rustttwavvv",
]

[workspace.package]
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/haruki7049/moonlight"
publish = false

[workspace.metadata.crane]
name = "moonlight"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.40", features = ["derive", "string"] }
confy = "1.0.0"
directories = "6.0.0"
i24 = "2.3.3"
num-traits = "0.2.19"
riffy_chan.path = "./crates/riffy_chan"
rustttwavvv.path = "./crates/rustttwavvv"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
