[package]
name = "crabmix"
authors.workspace = true
version.workspace = true
description = "Audio processing library for Rustacean & Musician to compile Rust programs to a music"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rustttwavvv.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
