[package]
name = "moonlight"
authors.workspace = true
version.workspace = true
description = "Audio processing library for Rustacean & Musician to compile Rust programs to a music"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
