[package]
name = "riffy_chan"
authors.workspace = true
version.workspace = true
description = "RIFF decoder & encoder for/by Rust-lang"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true
