[package]
name = "rustttwavvv"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
i24.workspace = true
num-traits.workspace = true
riffy_chan.workspace = true
thiserror.workspace = true
